compiler/testData/diagnostics/tests/backingField/ReadNonexistentAbstractPropertyInFunction.jet
abstract class ReadNonexistent {
    abstract val aa: Int
    
    fun ff() = <!UNRESOLVED_REFERENCE!>$aa<!>
}
